--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,31 @@
-
----
-
-# 🌐 **4️⃣ public/index.html**
-
-```html
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <!-- Mobile responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- App Title -->
     <title>StudentFlow</title>
 
+    <!-- Favicon -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
+    <!-- Theme Color -->
     <meta name="theme-color" content="#2563eb" />
-    <meta name="description" content="StudentFlow - Student Management System" />
+
+    <!-- SEO Description -->
+    <meta
+      name="description"
+      content="StudentFlow – A complete Student Management System built with React."
+    />
   </head>
 
   <body>
     <noscript>You need to enable JavaScript to run StudentFlow.</noscript>
+
+    <!-- React Root -->
     <div id="root"></div>
   </body>
 </html>
